# strix

./: .gitignore  Cargo.toml  README.md
src/: args.rs  build.rs  config.rs  fmt.rs  main.rs  new.rs
