[package]
name = "strix"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"

log = "0.4"
fern = { version = "0.6", features = ["colored"] }

chrono = "0.4"

dprint-plugin-biome = "0.0.1"
similar = "2.6"
console = "0.15"
humantime = "2.1"

walkdir = "2.5"
rand = "0.9.0-alpha.2"
tokio = { version = "1.39.2", features = ["full"] }
num_cpus = "1.16.0"
