[package]
name = "strix"
version = "0.1.0"
edition = "2021"
authors = ["theaddonn <theaddonn@gmail.com>"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"

log = "0.4"
fern = { version = "0.6", features = ["colored"] }

chrono = "0.4"

dprint-plugin-biome = "0.0.1"
similar = "2.6"
console = "0.15"
humantime = "2.1"

walkdir = "2.5"
directories = "5.0"
zip = "2.1"
rand = "0.8"
tokio = { version = "1.39", features = ["full"] }
num_cpus = "1.16"

serde = "1.0"
serde_json = "1.0"
json_comments = "0.2"
uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"
